fix parallax img on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,11 @@ section.ocean {
 		background-attachment: inherit;
 	}
 }
+@media screen and (min-width: 768px) {
+	#img_patch {
+		background-attachment: inherit;
+	}
+}
 #img_micro {
 	height: 700px;
     background-image: url("../img/img_plastic03.jpg");
@@ -178,6 +183,11 @@ section.ocean {
 		background-attachment: inherit;
 	}
 }
+@media screen and (min-width: 768px) {
+	#img_micro {
+		background-attachment: inherit;
+	}
+}
 #img_beach {
 	height: 500px;
     background-image: url("../img/img_plastic06.jpg");
@@ -187,7 +197,12 @@ section.ocean {
     background-size: cover;
 }
 @media screen and (max-width: 768px) {
-	#img_micro {
+	#img_beach {
+		background-attachment: inherit;
+	}
+}
+@media screen and (min-width: 768px) {
+	#img_beach {
 		background-attachment: inherit;
 	}
 }
